# ask-memory

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
evals/: memory_history.py
src/ask_memory/: chunk.py  document.py  history_mcp.py  llm_semantic_chunker.py  main.py  main_cli.py  main_memory_history_mcp.py  markdown_blocks.py  markdown_blocks_chunk.py  retriever.py  utils.py
src/ask_memory/chunker/: llm_semantic_chunker.py  markdown_blocks_chunk.py
src/ask_memory/core/: history.py  rag_file.py  utils.py
src/ask_memory/memory_history/: agent.py  memory_history.py
src/ask_memory/retriever/: chroma.py  retriever.py
src/ask_memory/retrievers/: chroma.py  retriever.py
tests/: test_markdown_blocks.py  test_markdown_blocks_chunk.py
