[project]
name = "ask-memory"
version = "0.1.0"
description = "A Python project"
requires-python = ">=3.13"
dependencies = [
    "ask",
    "chromadb",
    "unstructured[md]>=0.18.15",
    "markitdown[all]>=0.1.3",
    "mistune>=3.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
ask = { git = "https://github.com/varlabz/ask.git" }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
