[project]
name = "ask-memory"
version = "0.1.0"
description = "A Python project"
requires-python = ">=3.13"
dependencies = [
    "ask",
    "chromadb",
    "unstructured[md]>=0.18.15",
    "markitdown[all]>=0.1.3",
    "mistune>=3.1.4",
    "mcp[cli]>=1.19.0",
    "ollama>=0.6.0",
]

[project.scripts]
memory-mcp = "ask_memory.main_memory_history_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
ask = { git = "https://github.com/varlabz/ask.git" }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
